[package]
name = "wasm-playground"
version = "0.1.0"
authors = ["smmalis37@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4.5"

[dependencies.wasm-bindgen]
version = "0.2.86"
default-features = false

[dependencies.rand]
version = "0.8"
default-features = false
features = ["small_rng", "getrandom"]

[dependencies.getrandom]
version = "0.2"
default-features = false
features = ["js"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
