[package]
name = "wasm-playground"
authors = ["smmalis37@gmail.com"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = "0.4"
wasm-bindgen = { version = "0.2", default-features = false }
rand = { version = "0.9", default-features = false, features = [
    "small_rng",
    "os_rng",
] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
