[package]
name = "wasm-playground"
authors = ["smmalis37@gmail.com"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lol_alloc = "0.4"
web-sys = { version = "0.3", default-features = false, features = [
    "Document",
    "Element",
    "HtmlInputElement",
    "Window",
] }
wasm-bindgen = { version = "0.2", default-features = false }
rand = { version = "0.9", default-features = false, features = [
    "os_rng",
    "small_rng",
] }
getrandom = { version = "0.3", default-features = false, features = [
    "wasm_js",
] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
